exports[`test can specify a maximum x scale 1`] = `
<div
  style={
    Object {
      "transform": "scale3d(1.1, 1, 1)",
      "transformOrigin": "center center",
      "transition": "transform 600ms ease-in-out",
    }
  }>
  Children
</div>
`;

exports[`test can specify a maximum y scale 1`] = `
<div
  style={
    Object {
      "transform": "scale3d(1, 1.1, 1)",
      "transformOrigin": "center center",
      "transition": "transform 600ms ease-in-out",
    }
  }>
  Children
</div>
`;

exports[`test can specify a minimum x scale 1`] = `
<div
  style={
    Object {
      "transform": "scale3d(0.1, 0, 1)",
      "transformOrigin": "center center",
      "transition": "transform 600ms ease-in-out",
    }
  }>
  Children
</div>
`;

exports[`test can specify a minimum y scale 1`] = `
<div
  style={
    Object {
      "transform": "scale3d(0, 0.1, 1)",
      "transformOrigin": "center center",
      "transition": "transform 600ms ease-in-out",
    }
  }>
  Children
</div>
`;

exports[`test has no scale when inactive 1`] = `
<div
  style={
    Object {
      "transform": "scale3d(0, 0, 1)",
      "transformOrigin": "center center",
      "transition": "transform 600ms ease-in-out",
    }
  }>
  Children
</div>
`;

exports[`test has scale of 1 when active 1`] = `
<div
  style={
    Object {
      "transform": "scale3d(1, 1, 1)",
      "transformOrigin": "center center",
      "transition": "transform 600ms ease-in-out",
    }
  }>
  Children
</div>
`;
